--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/giro/komponen/saldo-rekening-giro/saldo-rekening-giro.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/giro/komponen/saldo-rekening-giro/saldo-rekening-giro.component.html
@@ -1,3 +1,118 @@
-<p>
-  saldo-rekening-giro works!
-</p>
+<mdb-card class="mb-3">
+  <mdb-card-body>
+
+    <mat-tab-group>
+      <mat-tab label="Riwayat Saldo">
+
+        <h5 class="text-primary font-weight-bold">Saldo Rekening</h5>
+        <div class="row">
+          <label class="col-3 font-weight-bold">No Rekening</label>
+          <label>:</label>
+          <label class="col-3">20345678 - Anugrah, CV</label>
+        </div>
+
+        <div class="row">
+          <label class="col-3 font-weight-bold">Pendebetan Harian</label>
+          <label>:</label>
+          <label class="col-3">0</label>
+        </div>
+
+        <div class="row">
+          <label class="col-3 font-weight-bold">Pendebetan Bulanan</label>
+          <label>:</label>
+          <label class="col-3">0</label>
+        </div>
+
+        <div class="row">
+          <label class="col-3 font-weight-bold">Saldo Awal</label>
+          <label>:</label>
+          <label class="col-3">1.400.000</label>
+        </div>
+
+        <div class="row">
+          <label class="col-3 font-weight-bold">Mutasi Debet</label>
+          <label>:</label>
+          <label class="col-3">
+            0.000
+          </label>
+        </div>
+
+        <div class="row">
+          <label class="col-3 font-weight-bold">Mutasi Kredit </label>
+          <label>:</label>
+          <label class="col-3">0.00</label>
+        </div>
+
+        <div class="row">
+          <label class="col-3 font-weight-bold">Saldo Buku (Ledger)</label>
+          <label>:</label>
+          <label class="col-3">1.400.000</label>
+        </div>
+        <br><br>
+
+        <div class="row">
+          <label class="col-3 font-weight-bold">Kliring on B/S</label>
+          <label>:</label>
+          <label class="col-3">0.0</label>
+        </div>
+        <div class="row">
+          <label class="col-3 font-weight-bold">Saldo Eff.(clear)</label>
+          <label>:</label>
+          <label class="col-3">1.400.000</label>
+        </div>
+
+        <div class="row">
+          <label class="col-3 font-weight-bold">Saldo Yg. Diblokir</label>
+          <label>:</label>
+          <label class="col-3">0.0</label>
+        </div>
+
+        <div class="row">
+          <label class="col-3 font-weight-bold">Saldo Minimum</label>
+          <label>:</label>
+          <label class="col-3">10.000</label>
+        </div>
+
+        <div class="row">
+          <label class="col-3 font-weight-bold">Nilai Plafon</label>
+          <label>:</label>
+          <label class="col-3">0.0</label>
+        </div>
+
+        <div class="row">
+          <label class="col-3 font-weight-bold">Saldo Yg. Tersedia </label>
+          <label>:</label>
+          <label class="col-3">1.350.000</label>
+        </div>
+        <br><br>
+
+        <div class="row">
+          <label class="col-3 font-weight-bold">Kredit Belum Otrs</label>
+          <label>:</label>
+          <label class="col-3">0.00</label>
+        </div>
+
+
+        <div class="row">
+          <label class="col-3 font-weight-bold">Saldo Dpt. Dipakai</label>
+          <label>:</label>
+          <label class="col-3">1.350.000</label>
+        </div>
+
+        <div class="row">
+          <label class="col-3 font-weight-bold">Kliring Hari Ini</label>
+          <label>:</label>
+          <label class="col-3">1.350.000</label>
+        </div>
+
+        <div class="row">
+          <label class="col-3 font-weight-bold">Outst.Kliring</label>
+          <label>:</label>
+          <label class="col-3">1.350.000</label>
+        </div>
+
+      </mat-tab>
+    </mat-tab-group>
+
+  </mdb-card-body>
+</mdb-card>
