update lazy loading

--- a/src/app/header/header-home/header-home.component.html
+++ b/src/app/header/header-home/header-home.component.html
@@ -54,7 +54,7 @@
       </button>
 
       <div class="dropdown-menu dropdown-primary">
-        <button class="dropdown-item text-dark btn-5" [routerLink]="['/tellerin/tellerin']">Teller In</button>
+        <button class="dropdown-item text-dark btn-5" [routerLink]="['/tellerin/']">Teller In</button>
         <button class="dropdown-item text-dark btn-5" [routerLink]="['/tellerin/setorantunai']">Setoran Tunai</button>
         <button class="dropdown-item text-dark btn-5" [routerLink]="['/tellerin/penarikantunai']">Penarikan Tunai</button>
         <button class="dropdown-item text-dark btn-5" [routerLink]="['/tellerin/pindahbuku']">Pemindahbukuan Tanpa Cek</button>
@@ -120,7 +120,7 @@
         <button class="dropdown-item text-dark" [routerLink]="['/usermaintenance/role']">Pencarian Role</button>
         <button class="dropdown-item text-dark" [routerLink]="['/usermaintenance/refresh']">Refresh User</button>
       </div>
-    </div> -->
+    </div>
 <!-- </div> -->
 
     <!-- Try Multi Dropdown -->
@@ -211,7 +211,7 @@
       </button>
 
       <div class="dropdown-menu dropdown-primary">
-        <button class="dropdown-item text-dark" [routerLink]="['/kartu/carikartuatm']">Pencarian Kartu ATM</button>
+        <button class="dropdown-item text-dark" [routerLink]="['/kartu']">Pencarian Kartu ATM</button>
       </div>
     </div>
 
