--- a/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
@@ -56,29 +56,14 @@
               <mat-tab-group>
                 <mat-tab label="INFORMASI CIF">
 
-                  <mat-tab-group>
-                    <mat-tab label="DATA UMUM CIF">
-                      <app-data-umum-nasabah></app-data-umum-nasabah>
-                    </mat-tab>
-                    <mat-tab label="DATA PERSONAL">
-                      <app-data-personal></app-data-personal>
-                    </mat-tab>
-                    <mat-tab label="TRANSAKSI LIMIT">
-                      <app-transaksi-limit></app-transaksi-limit>
-                    </mat-tab>
-                    <mat-tab label="SANDI BI">
-                      <app-sandi-bi></app-sandi-bi>
-                    </mat-tab>
-                    <mat-tab label="DATA TAMBAHAN">
-                      <app-data-tambahan></app-data-tambahan>
-                    </mat-tab>
-                  </mat-tab-group>
+                  <app-informasi-cif></app-informasi-cif>
 
                 </mat-tab>
 
                 <mat-tab label="PORTOFOLIO CIF">
                   <app-portofolio-cif></app-portofolio-cif>
                 </mat-tab>
+
                 <mat-tab label="RELASI CIF">
                   <mat-tab-group>
                     <mat-tab label="First"> Content 1 </mat-tab>
