--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/giro/giro.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/giro/giro.component.html
@@ -103,6 +103,9 @@
           <mat-tab label="Bunga Cerukan">
             <app-bunga-cerukan-giro></app-bunga-cerukan-giro>
           </mat-tab>
+          <mat-tab label="Riwayat Saldo">
+            <app-riwayat-saldo-giro></app-riwayat-saldo-giro>
+          </mat-tab>
         </mat-tab-group>
 
       </div>
