--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/giro/komponen/data-administrasi-giro/data-administrasi-giro.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/giro/komponen/data-administrasi-giro/data-administrasi-giro.component.html
@@ -2,7 +2,7 @@
   <mdb-card-body>
 
     <mat-tab-group>
-      <mat-tab label="Riwayat Saldo">
+      <mat-tab>
         <h5 class="text-primary font-weight-bold">Data Rekening Giro</h5>
 
         <div class="row justify-content-start">
