--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/portofolio-cif.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/portofolio-cif.component.html
@@ -57,7 +57,9 @@
             <app-giro></app-giro>
           </mat-tab>
           <!-- Deposito -->
-          <mat-tab label="Deposito"> Content 3 </mat-tab>
+          <mat-tab label="Deposito">
+            <app-deposito></app-deposito>
+          </mat-tab>
           <!-- Pinjaman -->
           <mat-tab label="Pinjaman"> Content 4 </mat-tab>
           <!-- Fasilitas -->
