--- a/src/app/nasabah/pencarian-nasabah/informasi-cif/informasi-cif.component.html
+++ b/src/app/nasabah/pencarian-nasabah/informasi-cif/informasi-cif.component.html
@@ -4,25 +4,30 @@
     <div class="card konten">
       <div class="card-body">
 
-        <mat-tab-group>
-          <mat-tab label="DATA UMUM CIF">
-            <app-data-umum-nasabah></app-data-umum-nasabah>
-          </mat-tab>
-          <mat-tab label="DATA PERSONAL">
-            <app-data-personal></app-data-personal>
-          </mat-tab>
-          <mat-tab label="TRANSAKSI LIMIT">
-            <app-transaksi-limit></app-transaksi-limit>
-          </mat-tab>
-          <mat-tab label="SANDI BI">
-            <app-sandi-bi></app-sandi-bi>
-          </mat-tab>
-          <mat-tab label="DATA TAMBAHAN">
-            <app-data-tambahan></app-data-tambahan>
-          </mat-tab>
-        </mat-tab-group>
-        </mat-tab>
+        <!--Panel Atas 1-->
+        <mdb-card class="mb-3">
+          <mdb-card-body>
 
+            <mat-tab-group>
+              <mat-tab label="DATA UMUM CIF">
+                <app-data-umum-nasabah></app-data-umum-nasabah>
+              </mat-tab>
+              <mat-tab label="DATA PERSONAL">
+                <app-data-personal></app-data-personal>
+              </mat-tab>
+              <mat-tab label="TRANSAKSI LIMIT">
+                <app-transaksi-limit></app-transaksi-limit>
+              </mat-tab>
+              <mat-tab label="SANDI BI">
+                <app-sandi-bi></app-sandi-bi>
+              </mat-tab>
+              <mat-tab label="DATA TAMBAHAN">
+                <app-data-tambahan></app-data-tambahan>
+              </mat-tab>
+            </mat-tab-group>
+
+          </mdb-card-body>
+        </mdb-card>
 
 
       </div>
