--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/giro/komponen/bunga-prk-giro/bunga-prk-giro.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/giro/komponen/bunga-prk-giro/bunga-prk-giro.component.html
@@ -2,7 +2,7 @@
   <mdb-card-body>
 
     <mat-tab-group>
-      <mat-tab label="Riwayat Saldo">
+      <mat-tab>
 
         <h5 class="text-primary font-weight-bold">Rincian Perhitungan Bunga Jasa Giro</h5>
 
