--- a/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
+++ b/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
@@ -55,17 +55,17 @@
                   </thead>
                   <tr>
                     <td class="font-weight-normal"><a (click)="aktivasiMenu()">123456789</a></td>
-                    <td class="font-weight-normal">AAAA</td>
-                    <td class="font-weight-normal">Aktif</td>
-                    <td class="font-weight-normal">Normal</td>
-                    <td class="font-weight-normal">Buka </td>
+                    <td class="font-weight-normal"><a (click)="aktivasiMenu()">AAAA</a></td>
+                    <td class="font-weight-normal"><a (click)="aktivasiMenu()">Aktif</a></td>
+                    <td class="font-weight-normal"><a (click)="aktivasiMenu()">Normal</a></td>
+                    <td class="font-weight-normal"><a (click)="aktivasiMenu()">Buka</a></td>
                   </tr>
                   <tr>
-                    <td class="font-weight-normal">123456789</td>
-                    <th class="font-weight-normal">DDDDDDD</th>
-                    <td class="font-weight-normal">Aktif</td>
-                    <td class="font-weight-normal">Capture</td>
-                    <td class="font-weight-normal">Tutup</td>
+                    <td class="font-weight-normal"><a (click)="aktivasiMenu()">123456789</a></td>
+                    <th class="font-weight-normal"><a (click)="aktivasiMenu()">DDDDDDD</a></th>
+                    <td class="font-weight-normal"><a (click)="aktivasiMenu()">Aktif</a></td>
+                    <td class="font-weight-normal"><a (click)="aktivasiMenu()">Capture</a></td>
+                    <td class="font-weight-normal"><a (click)="aktivasiMenu()">Tutup</a></td>
                   </tr>
                 </table>
                 <!--Pagination-->
