--- a/src/app/kartu/tabskartu/komponen/buka-blokir/buka-blokir.component.html
+++ b/src/app/kartu/tabskartu/komponen/buka-blokir/buka-blokir.component.html
@@ -19,29 +19,17 @@
 
         <label class="col-2 col-form-label  font-weight-bold">Jenis Kelamin</label>
         <label class="col-form-label pr-0  font-weight-bold">:</label>
-        <div class="col-3"><label class="col-form-label">Perempuan</label></div>
+        <div class="col-3"><label class="col-form-label"></label></div>
         <span class="col-6"></span>
 
         <label class="col-2 col-form-label  font-weight-bold">Status</label>
         <label class="col-form-label pr-0  font-weight-bold">:</label>
-        <div class="col-3"><label class="col-form-label">Lajang</label></div>
+        <div class="col-3"><label class="col-form-label"></label></div>
         <span class="col-6"></span>
 
         <label class="col-2 col-form-label  font-weight-bold">Nomor Telepon</label>
         <label class="col-form-label pr-0  font-weight-bold">:</label>
-        <div class="col-3"><label class="col-form-label">088888888888</label></div>
-        <span class="col-6"></span>
-
-        <label class="col-2 col-form-label  font-weight-bold">Nomor Telepon</label>
-        <label class="col-form-label pr-0  font-weight-bold">:</label>
-        <div class="col-3">
-            <select class="custom-select" name="albok" id="albok" style="width: 250px;">
-              <option selected disabled>Pilih Salah Satu</option>
-              <option value="1">Kartu Palsu</option>
-              <option value="2">Kartu Hilang</option>
-              <option value="3">Kartu Tertelan Mesin ATM</option>
-            </select>
-          </div>
+        <div class="col-3"><label class="col-form-label"></label></div>
         <span class="col-6"></span>
       </div>
     </ng-container>
@@ -58,6 +46,11 @@
             <span class="col-6"></span>
     
   
+            <label class="col-2 col-form-label  font-weight-bold">Jenis Kelamin</label>
+            <label class="col-form-label pr-0  font-weight-bold">:</label>
+            <div class="col-3"><label class="col-form-label"></label></div>
+            <span class="col-6"></span>
+    
             <label class="col-2 col-form-label  font-weight-bold">Status</label>
             <label class="col-form-label pr-0  font-weight-bold">:</label>
             <div class="col-3"><label class="col-form-label"></label></div>
@@ -65,7 +58,7 @@
     
             <label class="col-2 col-form-label  font-weight-bold">Nomor Telepon</label>
             <label class="col-form-label pr-0  font-weight-bold">:</label>
-            <div class="col-3"><label class="col-form-label">088888888888</label></div>
+            <div class="col-3"><label class="col-form-label"></label></div>
             <span class="col-6"></span>
             
             <label class="col-2 col-form-label  font-weight-bold">Alasan Blokir</label>
