--- a/src/app/kartu/tabskartu/tabskartu.component.html
+++ b/src/app/kartu/tabskartu/tabskartu.component.html
@@ -3,33 +3,33 @@
   <div class="card-body">
 
     <mat-tab-group>
-      <mat-tab label="Aktivasi">
+      <mat-tab label="AKTIVASI">
         <ng-template matTabContent>
           <aktivasi-kartu></aktivasi-kartu>
-          {{title("Aktivasi Kartu")}}
+          {{title("AKTIVASI KARTU")}}
         </ng-template>
       </mat-tab>
-      <mat-tab label="Blokir">
+      <mat-tab label="BLOKIR">
         <ng-template matTabContent>
           <blokir-kartu></blokir-kartu>
-          {{title("Blokir Kartu")}}
+          {{title("BLOKIR KARTU")}}
         </ng-template>
       </mat-tab>
-      <mat-tab label="Buka Blokir">
+      <mat-tab label="BUKA BLOKIR">
         <ng-template matTabContent>
           <app-buka-blokir></app-buka-blokir>
-          {{title("Buka Blokir")}}
+          {{title("BUKA BLOKIR")}}
         </ng-template>
       </mat-tab>
-      <mat-tab label="Tutup">
+      <mat-tab label="TUTUP">
         <ng-template matTabContent>
           <tutup-kartu></tutup-kartu>
-          {{title("Tutup Kartu")}}
+          {{title("TUTUP KARTU")}}
         </ng-template>
       </mat-tab>
-      <mat-tab label="Relasi">
+      <mat-tab label="RELASI">
         <ng-template matTabContent>
-          {{title("Relasi Kartu")}}
+          {{title("RELASI KARTU")}}
           <relasi-kartu></relasi-kartu>
         </ng-template>
       </mat-tab>
