--- a/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
+++ b/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
@@ -4,7 +4,7 @@
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
       <div class="card-body">
-        <h5 class="text-primary font-weight-bold">Transaksi Penarikan Tunai</h5>
+        <h5 class="text-primary font-weight-bold">TRANSAKSI PENARIKAN TUNAI</h5>
 
         <mdb-card>
           <mdb-card-body>
