--- a/src/app/teller-in/teller-in-pindah-buku-beda-uang/teller-in-pindah-buku-beda-uang.component.html
+++ b/src/app/teller-in/teller-in-pindah-buku-beda-uang/teller-in-pindah-buku-beda-uang.component.html
@@ -4,7 +4,7 @@
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
       <div class="card-body">
-        <h5 class="text-primary font-weight-bold">Cetak Rekening Koran</h5>
+        <h5 class="text-primary font-weight-bold">TRANSAKSI PEMINDAHBUKUAN BEDA MATA UANG DENGAN CEK</h5>
 
         <mdb-card>
           <mdb-card-body>
