--- a/src/app/teller-in/teller-in/teller-in.component.html
+++ b/src/app/teller-in/teller-in/teller-in.component.html
@@ -4,78 +4,95 @@
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
       <div class="card-body">
-        <h5 class="text-primary font-weight-bold">Penerimaan Dari Teller Lain</h5>
+        <h5 class="text-primary font-weight-bold">PENERIMAAN DARI TELLER LAIN</h5>
 
         <mdb-card>
           <mdb-card-body>
             <form [formGroup]="validatingForm">
-            <!--input 1-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Tanggal Valuta</label>
-              <label class="col-form-label pr-0 font-weight-bold">:</label>
-              <div class="col-3 form-inline">
-                <div class="input-group">
-                  <input class="form-control" value="{{tanggal | date:'dd/MM/yyyy'}}" id="TglValuta" disabled>
+              <!--input 1-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Tanggal Valuta</label>
+                <label class="col-form-label pr-0 font-weight-bold">:</label>
+                <div class="col-3 form-inline">
+                  <div class="input-group">
+                    <input class="form-control" value="{{tanggal | date:'dd/MM/yyyy'}}" id="TglValuta" disabled>
+                  </div>
                 </div>
               </div>
-            </div>
-            <!--input1-->
-            <!--input 2-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Nomor Referensi</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"><input type="number" class="form-control" id="NoReferensi"></div>
-              <span class="col-6"></span>
-            </div>
-            <!--input 2-->
-            <!--input 3-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Mata Uang</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3">
-                <select class="custom-select" mdbValidate class="form-control" formControlName="mataUang" name="optkodempn" id="MataUang" style="width: 250px;">
-                  <option selected disabled>Pilih Salah Satu</option>
-                  <option value="idr">IDR</option>
-                  <option value="usd">USD</option>
-                  <option value="yen">YEN</option>
-                </select>
+              <!--input1-->
+              <!--input 2-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Nomor Referensi</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <div class="col-3"><input type="number" class="form-control" id="NoReferensi"></div>
+                <span class="col-6"></span>
               </div>
-              <p class="col-6 text-danger" *ngIf="inputMataUang.invalid && (inputMataUang.dirty || inputMataUang.touched)">Mohon Pilih Salah Satu Mata Uang</p>
-            </div>
-            <!--input 3-->
-            <!--input 4-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Nilai Transaksi</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"> <input mdbInput mdbValidate currencyFormat data-symbol="Rp." type="text" min="10000" class="form-control" id="nilaiTransaksi"
-                minlength="10" formControlName="nilaiTransaksi"></div>
+              <!--input 2-->
+              <!--input 3-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Mata Uang</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <div class="col-3">
+                  <select class="custom-select" 
+                          mdbValidate 
+                          class="form-control" 
+                          formControlName="mataUang" 
+                          name="optkodempn"
+                          id="MataUang" 
+                          style="width: 250px;"
+                          (change)="ChangingValue($event.target.value)"
+                          >
+                    <option selected disabled>Pilih Salah Satu</option>
+                    <option value="idr">IDR</option>
+                    <option value="usd">USD</option>
+                    <option value="yen">YEN</option>
+                  </select>
+                </div>
+                <p class="col-6 text-danger" *ngIf="inputMataUang.invalid && (inputMataUang.dirty || inputMataUang.touched)">Mohon
+                  Pilih Salah Satu Mata Uang</p>
+              </div>
+              <!--input 3-->
+              <!--input 4-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Nilai Transaksi</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <div class="col-3">
+                  <input  currencyMask class="form-control" 
+                          id="nilaiTransaksi" 
+                          formControlName="nilaiTransaksi"
+                          [options]="{ prefix: 'Rp ', thousands: '.', decimal: ',',precision : '0' }" 
+                  />
+                </div>
                 <p class="col-6 text-danger" *ngIf="inputNilai.invalid && (inputNilai.dirty || inputNilai.touched)">Mohon
-                    Masukan Nilai Transaksi(*minimum Rp.10Rb)</p>
-            </div>
-            <!--input 4-->
-            <!--input 5-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Kode Departemen</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <label class="col-2 col-form-label  font-weight-bold">DC</label>
-              <span class="col-6"></span>
-            </div>
-            <!--input 5-->
-            <!--input 6-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Keterangan</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <span></span>
-              <div class="col-4"><textarea rows="4" cols="50" class="form-control" id="Keterangan"></textarea></div>
-              <span class="col-6"></span>
-            </div>
-            <!--input 6-->
-            <div class="d-flex justify-content-center">
-                <button mdbBtn type="button" color="primary" mdbWavesEffect *ngIf="inputNilai.invalid || inputMataUang.invalid" disabled><i class="fa fa-refresh"></i> Proses</button>
-                <button mdbBtn type="button" color="primary" mdbWavesEffect *ngIf="inputNilai.valid || inputMataUang.valid" (click)="proses()"><i class="fa fa-refresh"></i> Proses</button>
-              <button type="button btn-md" mdbBtn color="primary" [routerLink]="['/']" routerLinkActive="router-link-active" mdbWavesEffect>
-                Kembali</button>
-            </div>
+                  Masukan Nilai Transaksi(*minimum Rp.10Rb)</p>
+              </div>
+              <!--input 4-->
+              <!--input 5-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Kode Departemen</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <label class="col-2 col-form-label  font-weight-bold">DC</label>
+                <span class="col-6"></span>
+              </div>
+              <!--input 5-->
+              <!--input 6-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Keterangan</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <span></span>
+                <div class="col-4"><textarea rows="4" cols="50" class="form-control" id="Keterangan"></textarea></div>
+                <span class="col-6"></span>
+              </div>
+              <!--input 6-->
+              <div class="d-flex justify-content-center">
+                <button mdbBtn type="button" color="primary" mdbWavesEffect *ngIf="inputNilai.invalid || inputMataUang.invalid"
+                  disabled><i class="fa fa-refresh"></i> Proses</button>
+                <button mdbBtn type="button" color="primary" mdbWavesEffect *ngIf="inputNilai.valid || inputMataUang.valid"
+                  (click)="proses()"><i class="fa fa-refresh"></i> Proses</button>
+                <button type="button btn-md" mdbBtn color="primary" [routerLink]="['/']" routerLinkActive="router-link-active"
+                  mdbWavesEffect>
+                  Kembali</button>
+              </div>
             </form>
           </mdb-card-body>
         </mdb-card>
