--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/deposito/deposito.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/deposito/deposito.component.html
@@ -52,6 +52,19 @@
           </div>
         </div>
 
+        <div class="row d-flex justify-content-center" aria-label="Basic example mb-0">
+          <button type="button" class="btn btn-primary" style="width: 170px"> Mutasi</button><br>
+        </div>
+
+        <mat-tab-group>
+          <mat-tab label="Data Berjangka">
+            <app-data-deposito-berjangka></app-data-deposito-berjangka>
+          </mat-tab>
+          <mat-tab label="Detail Mutasi">
+            <app-detail-mutasi-deposito></app-detail-mutasi-deposito>
+          </mat-tab>
+        </mat-tab-group>
+
 
 
       </div>
