--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/portofolio-cif.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/portofolio-cif.component.html
@@ -61,7 +61,9 @@
             <app-deposito></app-deposito>
           </mat-tab>
           <!-- Pinjaman -->
-          <mat-tab label="Pinjaman"> Content 4 </mat-tab>
+          <mat-tab label="Pinjaman">
+            <app-pinjaman></app-pinjaman>
+          </mat-tab>
           <!-- Fasilitas -->
           <mat-tab label="Fasilitas"> Content 5 </mat-tab>
           <!-- Kartu -->
